--- a/index.html
+++ b/index.html
@@ -198,7 +198,68 @@
         "• Unterstützung: Beratung über Telefonseelsorge (0800 111 0 333) oder Gruppen; Sport und Entspannungstechniken reduzieren Stress.",
         "Nach einem Jahr ohne Rauchen halbiert sich das Herzinfarktrisiko, nach 10 Jahren nähert es sich dem eines Nichtrauchers an. Starten Sie heute – Ihr Körper dankt es Ihnen langfristig. Bei Bedarf konsultieren Sie einen Arzt für personalisierte Strategien."
     ]
-}
+},
+            , // Wichtig: Das Komma trennt die neuen Artikel von den alten
+    { 
+        id: 5, 
+        title: "Diäten & Jojo-Effekt", 
+        cat: "Ernährung", 
+        time: "6 min", 
+        date: "14. Okt 2024", 
+        author: "Dr. oec. troph. Meier", 
+        // Bild: Gesunde Bowl/Salat
+        image: "https://images.unsplash.com/photo-1490645935967-10de6ba17061?auto=format&fit=crop&w=800&q=80", 
+        color: "bg-green-100", 
+        icon: paths.apple, 
+        desc: "Warum Crash-Diäten scheitern und was wirklich hilft. Ein Blick auf Stoffwechsel, Mythen und langfristige Erfolgsstrategien.",
+        fullText: [
+            "Diäten versprechen schnellen Gewichtsverlust, bergen aber oft Risiken wie Jo-Jo-Effekt, Nährstoffmangel und langfristigen Frustrationszyklus. Nachhaltiger Erfolg basiert auf ausgewogener Ernährung statt Crash-Diäten.",
+            "Mythen und Risiken: Viele Diäten (z.B. Low-Carb, Keto, Intervallfasten) funktionieren kurzfristig durch Kaloriendefizit, scheitern jedoch bei 80–95% der Teilnehmenden langfristig. Extremdiäten wie Detox-Säfte oder Monodiäten führen zu Muskelabbau, Müdigkeit, Haarausfall und verlangsamtem Stoffwechsel.",
+            "Der Jo-Jo-Effekt ist tückisch: Nach Abbruch steigt das Gewicht oft über das Ausgangsniveau. Zudem drohen Gesundheitsrisiken wie Gallensteine, Herzrhythmusstörungen und Essstörungen bei unbalancierten Ansätzen.",
+            "Wissenschaftlich bewährte Ansätze sind die Mediterrane Ernährung (viel Gemüse, Fisch, Olivenöl, Nüsse), die Herzrisiken um 30% reduziert. Eine moderate Kalorienreduktion um 500 kcal/Tag mit hohem Proteingehalt erhält Muskelmasse und sättigt länger.",
+            "Praktische Tipps: Starten Sie langsam. Ersetzen Sie zuckerreiche Snacks durch Vollkorn und Früchte. Nutzen Sie Apps wie MyFitnessPal für Tracking. Langfristig zählt Konsistenz über Perfektion – 5–10% Gewichtsreduktion verbessert Blutzucker und Blutdruck bereits spürbar."
+        ]
+    },
+    { 
+        id: 6, 
+        title: "Volkskrankheit Rücken", 
+        cat: "Prävention", 
+        time: "7 min", 
+        date: "16. Okt 2024", 
+        author: "Physio T. Müller", 
+        // Bild: Person beim Dehnen/Rückenübung
+        image: "https://images.unsplash.com/photo-1544367563-12123d8965cd?auto=format&fit=crop&w=800&q=80", 
+        color: "bg-blue-100", 
+        icon: paths.activity, 
+        desc: "80% der Bevölkerung sind betroffen. Erfahren Sie, wie Sie mit einfachen Übungen und Ergonomie Schmerzen lindern und vorbeugen.",
+        fullText: [
+            "Rückenschmerzen sind die häufigste Ursache für Arztbesuche und betreffen 80% der Bevölkerung irgendwann im Leben. Sie entstehen oft durch Fehlhaltung, Muskelschwund oder Überlastung, nicht selten durch langes Sitzen oder Stress.",
+            "Häufige Ursachen: Akute Rückenschmerzen (unter 6 Wochen) stammen meist von Muskelverspannungen oder Wirbelblockaden. Chronische Formen hängen oft mit schwacher Core-Muskulatur und psychischen Faktoren zusammen. Risikogruppen sind Büroangestellte, Schwangere und Ältere über 50.",
+            "Prävention und Behandlung: Regelmäßiges Core-Training (z.B. Planks) stärkt die Rückenmuskulatur und reduziert Schmerzepisoden um 30–50%. Ergonomische Anpassungen wie höhenverstellbare Schreibtische und Pausen alle 30 Minuten helfen vorbeugend.",
+            "Wann zum Arzt? Sofort handeln bei Taubheitsgefühlen in Beinen, Inkontinenz, Fieber oder nach einem Unfall. MRT oder CT sind nur bei Verdacht auf ernste Ursachen nötig. Die meisten Fälle (90%) bessern sich ohne Operation innerhalb von 6 Wochen.",
+            "Kleine Veränderungen wie tägliches Gehen (10.000 Schritte) und dynamisches Sitzen wirken Wunder."
+        ]
+    },
+    { 
+        id: 7, 
+        title: "Migräne verstehen", 
+        cat: "Forschung", 
+        time: "6 min", 
+        date: "18. Okt 2024", 
+        author: "Dr. med. Neuhaus", 
+        // Bild: Entspannung/Kopfweh-Symbolik
+        image: "https://images.unsplash.com/photo-1515377905703-c4788e51af15?auto=format&fit=crop&w=800&q=80", 
+        color: "bg-purple-100", 
+        icon: paths.search, 
+        desc: "Mehr als nur Kopfschmerzen: Ursachen, Symptome und moderne Therapieansätze für eine bessere Lebensqualität.",
+        fullText: [
+            "Migräne ist eine neurologische Erkrankung, die etwa 15% der Bevölkerung betrifft, Frauen dreimal häufiger als Männer. Sie ist durch starke, pochende Kopfschmerzen gekennzeichnet, oft einseitig und mit Übelkeit oder Lichtempfindlichkeit verbunden.",
+            "Symptome und Verlauf: Typische Anzeichen umfassen pulsierende Schmerzen von 4–72 Stunden Dauer, begleitet von Aura (Sehstörungen bei 20–30%), Erbrechen oder Geräuschempfindlichkeit. Phasen reichen von Prodromal (Müdigkeit) über Aura bis zur Hauptattacke.",
+            "Ursachen und Auslöser: Genetische Veranlagung und Hirnstoffwechselstörungen spielen eine Rolle. Auslöser sind oft Stress, Schlafmangel, hormonelle Schwankungen, Hunger oder Wetterwechsel. Neurologisch lösen überaktive Nervenzellen Entzündungen aus.",
+            "Behandlung: Akut helfen Ibuprofen oder Triptane bei früher Einnahme. Zur Prophylaxe eignen sich Betablocker oder Entspannungsverfahren wie Yoga. Ein Migränetagebuch hilft, persönliche Trigger zu identifizieren.",
+            "Wann zum Arzt? Sofort bei erstmaliger Aura, plötzlichen extrem starken Schmerzen oder neurologischen Ausfällen. Eine frühe Intervention kann die Attackenfrequenz halbieren."
+        ]
+    }
                 
         ];
 
