--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         date: "14. Okt 2024", 
         author: "Dr. oec. troph. Meier", 
         // Bild: Gesunde Bowl/Salat
-        image: "https://images.unsplash.com/photo-1490645935967-10de6ba17061?auto=format&fit=crop&w=800&q=80", 
+        image: "diaet.png", 
         color: "bg-green-100", 
         icon: paths.apple, 
         desc: "Warum Crash-Diäten scheitern und was wirklich hilft. Ein Blick auf Stoffwechsel, Mythen und langfristige Erfolgsstrategien.",
@@ -228,7 +228,7 @@
         date: "16. Okt 2024", 
         author: "Physio T. Müller", 
         // Bild: Person beim Dehnen/Rückenübung
-        image: "https://images.unsplash.com/photo-1544367563-12123d8965cd?auto=format&fit=crop&w=800&q=80", 
+        image: "ruecken.png", 
         color: "bg-blue-100", 
         icon: paths.activity, 
         desc: "80% der Bevölkerung sind betroffen. Erfahren Sie, wie Sie mit einfachen Übungen und Ergonomie Schmerzen lindern und vorbeugen.",
@@ -248,7 +248,7 @@
         date: "18. Okt 2024", 
         author: "Dr. med. Neuhaus", 
         // Bild: Entspannung/Kopfweh-Symbolik
-        image: "https://images.unsplash.com/photo-1515377905703-c4788e51af15?auto=format&fit=crop&w=800&q=80", 
+        image: "migraene.png", 
         color: "bg-purple-100", 
         icon: paths.search, 
         desc: "Mehr als nur Kopfschmerzen: Ursachen, Symptome und moderne Therapieansätze für eine bessere Lebensqualität.",
