--- a/index.html
+++ b/index.html
@@ -259,6 +259,64 @@
             "Behandlung: Akut helfen Ibuprofen oder Triptane bei früher Einnahme. Zur Prophylaxe eignen sich Betablocker oder Entspannungsverfahren wie Yoga. Ein Migränetagebuch hilft, persönliche Trigger zu identifizieren.",
             "Wann zum Arzt? Sofort bei erstmaliger Aura, plötzlichen extrem starken Schmerzen oder neurologischen Ausfällen. Eine frühe Intervention kann die Attackenfrequenz halbieren."
         ]
+    },
+            ,
+    { 
+        id: 8, 
+        title: "Zone 2: Das Geheimnis der Ausdauer", 
+        cat: "Fitness", 
+        time: "9 min", 
+        date: "20. Okt 2024", 
+        author: "Prof. Dr. Sportwiss. Arndt", 
+        // Bild: Jogger/Radfahrer entspannt
+        image: "https://images.unsplash.com/photo-1476480862126-209bfaa8edc8?auto=format&fit=crop&w=800&q=80", 
+        color: "bg-orange-100", 
+        icon: paths.activity, 
+        desc: "Warum 'langsam' das neue 'schnell' ist. Wie niedrig-intensives Training Ihre Mitochondrien und den Fettstoffwechsel optimiert.",
+        fullText: [
+            "Lange galt im Freizeitsport das Motto: 'Viel hilft viel'. Wer schwitzt und außer Atem ist, hat gut trainiert. Die moderne Sportwissenschaft zeichnet jedoch ein anderes Bild. Das sogenannte 'Zone 2 Training' revolutioniert gerade, wie wir über Ausdauer denken.",
+            "Was ist Zone 2? Es ist der Intensitätsbereich, in dem Sie sich noch entspannt unterhalten können (60-70% der maximalen Herzfrequenz). In diesem Bereich ist der Körper gezwungen, Fett statt Kohlenhydrate als primäre Energiequelle zu nutzen.",
+            "Der physiologische Vorteil: Nur in diesem Bereich vermehren sich die Mitochondrien – die Kraftwerke unserer Zellen. Mehr Mitochondrien bedeuten mehr Energie im Alltag und eine effizientere Fettverbrennung, auch im Ruhezustand.",
+            "Für den Einstieg gilt: Verbringen Sie 80% Ihrer Trainingszeit in diesem 'langweiligen' Bereich und nur 20% im hochintensiven Bereich. Ihr Herz-Kreislauf-System wird effizienter arbeiten als je zuvor."
+        ]
+    },
+    { 
+        id: 9, 
+        title: "Muskeln sind Medizin", 
+        cat: "Fitness", 
+        time: "5 min", 
+        date: "22. Okt 2024", 
+        author: "Dr. med. Reha", 
+        // Bild: Gewichte/Hanteln
+        image: "https://images.unsplash.com/photo-1534438327276-14e5300c3a48?auto=format&fit=crop&w=800&q=80", 
+        color: "bg-red-100", 
+        icon: paths.activity, 
+        desc: "Krafttraining ist die wichtigste Altersvorsorge. Wie Sie dem Muskelschwund (Sarkopenie) effektiv entgegenwirken.",
+        fullText: [
+            "Ab dem 30. Lebensjahr verliert der Mensch ohne Gegenmaßnahmen etwa 1% Muskelmasse pro Jahr. Dieser Prozess, Sarkopenie genannt, ist der Hauptgrund für Gebrechlichkeit im Alter. Doch Muskeln sind weit mehr als nur Motorik.",
+            "Die Muskulatur ist unser größtes Stoffwechselorgan. Wenn wir sie betätigen, schütten Muskeln sogenannte Myokine aus. Diese hormonähnlichen Botenstoffe wirken entzündungshemmend, stärken das Immunsystem und schützen sogar das Gehirn vor Demenz.",
+            "Krafttraining erhöht zudem die Insulinsensitivität und schützt so vor Typ-2-Diabetes. Es stärkt die Knochen und beugt Osteoporose vor.",
+            "Die Empfehlung: 2-3 Mal pro Woche ein Ganzkörpertraining. Dabei müssen keine schweren Gewichte gestemmt werden – das eigene Körpergewicht oder Widerstandsbänder reichen für den gesundheitlichen Effekt oft völlig aus."
+        ]
+    },
+    { 
+        id: 10, 
+        title: "HIIT vs. LISS", 
+        cat: "Fitness", 
+        time: "4 min", 
+        date: "25. Okt 2024", 
+        author: "Coach B. Fast", 
+        // Bild: Person beim Sprint/Sprung
+        image: "https://images.unsplash.com/photo-1434608519344-49d77a699ded?auto=format&fit=crop&w=800&q=80", 
+        color: "bg-blue-100", 
+        icon: paths.activity, 
+        desc: "Hochintensives Intervalltraining oder stetiges Ausdauertraining? Welcher Ansatz für Ihre Ziele der richtige ist.",
+        fullText: [
+            "Die Debatte hält sich wacker: Ist kurzes, extrem hartes Training (HIIT) besser als langes, moderates Training (LISS)? Die Antwort hängt stark von Ihrem Ziel und Ihrem Stresslevel ab.",
+            "HIIT (High Intensity Interval Training) ist extrem zeiteffizient. In 20 Minuten erreichen Sie metabolische Effekte, für die Sie sonst eine Stunde laufen müssten. Durch den 'Nachbrenneffekt' (EPOC) verbraucht der Körper noch Stunden später Energie. Ideal für Beschäftigte mit wenig Zeit.",
+            "LISS (Low Intensity Steady State) ist hingegen schonender für die Gelenke und senkt den Cortisolspiegel. Während HIIT den Körper unter Stress setzt, wirkt LISS oft regenerativ und stressabbauend.",
+            "Fazit: Wenn Sie bereits einen sehr stressigen Alltag haben, könnte intensives HIIT kontraproduktiv sein. Eine Kombination aus beidem – z.B. 1x HIIT und 2x LISS pro Woche – liefert oft die besten Ergebnisse ohne Übertraining."
+        ]
     }
                 
         ];
