--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
         );
 
         // --- 1. STIMULUS OVERLAY ---
+        // --- 1. STIMULUS OVERLAY ---
         const StimulusOverlay = ({ config, variant = "banner" }) => {
             const eyeColor = variant === 'banner' ? '#3b82f6' : '#5D4037'; 
             return (
@@ -381,13 +382,18 @@
                             </div>
                         </div>
                     )}
+                    
+                    {/* HIER IST DIE ÄNDERUNG FÜR DAS POP-UP */}
                     {config.info && variant === 'form' && (
-                        <div className="fixed bottom-4 right-4 max-w-xs bg-red-50 border-l-4 border-red-500 p-4 shadow-2xl z-[60] rounded-r animate-fade-in bg-white">
-                            <div className="flex gap-2">
-                                <Icon path={paths.shield} className="w-5 h-5 text-red-600 shrink-0" />
+                        <div className="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[90%] max-w-md bg-white border-4 border-red-600 p-8 shadow-[0_0_60px_rgba(220,38,38,0.6)] z-[100] rounded-xl animate-fade-in text-center pointer-events-none">
+                            <div className="flex flex-col items-center gap-4">
+                                <div className="bg-red-100 p-4 rounded-full border-2 border-red-200 animate-pulse">
+                                    <Icon path={paths.shield} className="w-12 h-12 text-red-600 shrink-0" />
+                                </div>
                                 <div>
-                                    <p className="font-bold text-red-800 text-xs uppercase">Datenüberwachung aktiv</p>
-                                    <p className="text-xs text-red-700 mt-1">Ihre Eingaben werden in Echtzeit analysiert.</p>
+                                    <p className="font-extrabold text-red-700 text-2xl uppercase mb-2 tracking-widest">Achtung</p>
+                                    <p className="font-bold text-red-900 text-lg uppercase mb-2">Datenüberwachung aktiv</p>
+                                    <p className="text-slate-700 font-medium">Ihre Eingaben werden in Echtzeit analysiert und protokolliert.</p>
                                 </div>
                             </div>
                         </div>
