--- a/index.html
+++ b/index.html
@@ -397,8 +397,7 @@
                         <div className="bg-red-50 border border-red-400 px-3 py-1 rounded shadow-md flex items-center gap-2 animate-fade-in mt-1">
                             <Icon path={paths.shield} className="w-3 h-3 text-red-600 shrink-0" />
                             <span className="text-red-800 font-bold text-xs uppercase tracking-wider">
-                                Datenüberwachung aktiv
-                            </span>
+Warnung: Ihre sensiblen Gesundheitsdaten werden an Dritte weitergegeben und für Werbung genutzt.                            </span>
                         </div>
                     )}
                 </div>
