--- a/index.html
+++ b/index.html
@@ -424,8 +424,7 @@ Warnung: Ihre sensiblen Gesundheitsdaten werden an Dritte weitergegeben und für
                                 <div className="hidden md:block w-1/4 shrink-0">
                                     <div className="bg-red-50 border border-red-200 p-3 rounded text-xs text-red-800">
                                         <div className="flex items-center gap-2 font-bold mb-1"><Icon path={paths.shield} className="w-4 h-4"/> WARNUNG</div>
-                                        Wenn Sie akzeptieren, werden Ihre Daten verknüpft.
-                                    </div>
+Warnung: Wenn Sie akzeptieren, werden Ihre Daten an Dritte weitergegeben und für Werbung genutzt.                                     </div>
                                 </div>
                             )}
                             <div className="flex-1">
