--- a/index.html
+++ b/index.html
@@ -181,30 +181,33 @@
             </div>
         );
 
-       // --- STIMULUS OVERLAY (Augen / Warnschild) ---
+// --- STIMULUS OVERLAY (Augen / Warnschild) ---
         const StimulusOverlay = ({ config, variant = "banner" }) => {
             const eyeColor = variant === 'banner' ? '#3b82f6' : '#5D4037';
             // Positionierung: Im Formular fixiert oben, beim Banner absolut darüber
             const positionClass = variant === 'form' 
                 ? 'fixed top-0 left-1/2 -translate-x-1/2 pt-1' 
-                : 'absolute -top-12 left-1/2 -translate-x-1/2';
+                : 'absolute -top-16 left-1/2 -translate-x-1/2'; // Etwas höher gesetzt (-top-16), da sie größer sind
 
             return (
                 <div className={`pointer-events-none z-[60] flex flex-col items-center gap-1 transition-opacity duration-500 ${positionClass}`}>
                     {config.eyes && (
-                        <div className="flex gap-4">
-                            <div className="bg-white p-1 rounded-full border border-gray-400 shadow-xl overflow-hidden animate-pulse-slow">
-                                <RealisticEye color={eyeColor} className="w-12 h-8" />
+                        <div className="flex gap-4 items-center justify-center filter drop-shadow-lg">
+                            {/* ÄNDERUNG HIER: p-2 für dickeren Rahmen, border-2 für fetteren Rand */}
+                            <div className="bg-white p-2 rounded-full border-2 border-gray-300 shadow-2xl overflow-hidden animate-pulse-slow">
+                                {/* ÄNDERUNG HIER: w-20 h-12 macht die Augen deutlich größer */}
+                                <RealisticEye color={eyeColor} className="w-20 h-12" />
                             </div>
-                            <div className="bg-white p-1 rounded-full border border-gray-400 shadow-xl overflow-hidden animate-pulse-slow">
-                                <RealisticEye color={eyeColor} className="w-12 h-8" />
+                            <div className="bg-white p-2 rounded-full border-2 border-gray-300 shadow-2xl overflow-hidden animate-pulse-slow">
+                                <RealisticEye color={eyeColor} className="w-20 h-12" />
                             </div>
                         </div>
                     )}
                     {config.info && variant === 'form' && (
-                        <div className="bg-red-50 border border-red-400 px-3 py-1 rounded shadow-md flex items-center gap-2 animate-fade-in mt-1">
-                            <Icon path={paths.shield} className="w-3 h-3 text-red-600 shrink-0" />
-                            <span className="text-red-800 font-bold text-xs uppercase tracking-wider">
+                        // mt-2 für etwas mehr Abstand zu den riesigen Augen
+                        <div className="bg-red-50 border-2 border-red-400 px-4 py-2 rounded-md shadow-md flex items-center gap-2 animate-fade-in mt-2">
+                            <Icon path={paths.shield} className="w-5 h-5 text-red-600 shrink-0" />
+                            <span className="text-red-900 font-bold text-sm uppercase tracking-wider">
                                 Warnung: Ihre sensiblen Gesundheitsdaten werden an Dritte weitergegeben.
                             </span>
                         </div>
