--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         @keyframes fade-in { from { opacity: 0; } to { opacity: 1; } }
         @keyframes pulse-slow { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.05); } }
         @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
+        /* Blinzel-Effekt: 0% bis 90% offen, dann kurzes Schließen bei 95% */
+@keyframes blink {
+  0%, 90%, 100% { transform: scaleY(1); }
+  95% { transform: scaleY(0.1); }
+}
+
+.animate-blink {
+  animation: blink 4s infinite;
+  transform-origin: center;
+}
         
         .animate-slide-up { animation: slide-up 0.5s ease-out forwards; }
         .animate-fade-in { animation: fade-in 0.8s ease-out forwards; }
@@ -68,20 +78,24 @@
         );
 
         const RealisticEye = ({ color, className, hasLashes }) => (
-            <svg viewBox="0 0 100 70" className={className} preserveAspectRatio="xMidYMid meet" style={{overflow: 'visible'}}>
-                 {hasLashes && (
-                    <g stroke="#1a1a1a" strokeWidth="1.5" fill="none" strokeLinecap="round">
-                        <path d="M15,28 Q10,15 5,12" /><path d="M25,23 Q20,10 15,8" /><path d="M35,20 Q32,8 28,5" />
-                        <path d="M50,18 Q50,8 50,4" /><path d="M65,20 Q68,8 72,5" /><path d="M75,23 Q80,10 85,8" /><path d="M85,28 Q90,15 95,12" />
-                    </g>
-                 )}
-                <path d="M5,35 Q50,-10 95,35 Q50,80 5,35 Z" fill="#fff" stroke="#333" strokeWidth="2" />
-                <circle cx="50" cy="35" r="16" fill={color} />
-                <circle cx="50" cy="35" r="16" fill="none" stroke="rgba(0,0,0,0.2)" strokeWidth="1" />
-                <circle cx="50" cy="35" r="7" fill="#111" />
-                <circle cx="55" cy="29" r="3" fill="#fff" opacity="0.9" />
-            </svg>
-        );
+    <svg viewBox="0 0 100 70" className={className} preserveAspectRatio="xMidYMid meet" style={{overflow: 'visible'}}>
+        {/* Die Wimpern bleiben starr oder bewegen sich mit - hier in der Gruppe bewegen sie sich mit */}
+        <g className="animate-blink">
+            {hasLashes && (
+                <g stroke="#1a1a1a" strokeWidth="1.5" fill="none" strokeLinecap="round">
+                    <path d="M15,28 Q10,15 5,12" /><path d="M25,23 Q20,10 15,8" /><path d="M35,20 Q32,8 28,5" />
+                    <path d="M50,18 Q50,8 50,4" /><path d="M65,20 Q68,8 72,5" /><path d="M75,23 Q80,10 85,8" /><path d="M85,28 Q90,15 95,12" />
+                </g>
+            )}
+            {/* Das eigentliche Auge */}
+            <path d="M5,35 Q50,-10 95,35 Q50,80 5,35 Z" fill="#fff" stroke="#333" strokeWidth="2" />
+            <circle cx="50" cy="35" r="16" fill={color} />
+            <circle cx="50" cy="35" r="16" fill="none" stroke="rgba(0,0,0,0.2)" strokeWidth="1" />
+            <circle cx="50" cy="35" r="7" fill="#111" />
+            <circle cx="55" cy="29" r="3" fill="#fff" opacity="0.9" />
+        </g>
+    </svg>
+);
         
         const paths = {
             shield: <React.Fragment><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10"/><path d="M12 8v4"/><path d="M12 16h.01"/></React.Fragment>,
