--- a/index.html
+++ b/index.html
@@ -717,7 +717,8 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
             const [targetUrl, setTargetUrl] = useState("");
             const fullDataString = JSON.stringify(data, null, 2);
             useEffect(() => { if (sessionToken) { const finalUrl = `${SOSCI_BASE_URL}?i=${sessionToken}&mydata=${encodeURIComponent(fullDataString)}`; setTargetUrl(finalUrl); } }, [sessionToken, fullDataString]);
-            return (<div className="min-h-screen bg-slate-50 flex flex-col items-center justify-center p-4 text-center"><div className="bg-white p-8 rounded-2xl shadow-xl max-w-lg w-full border-t-8 border-blue-500 animate-fade-in"><h2 className="text-2xl font-bold text-gray-800 mb-4">Studie beendet</h2><p className="text-gray-600 mb-6">Vielen Dank! Ihre Daten wurden erfolgreich gespeichert.</p>{targetUrl ? <a href={targetUrl} className="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 rounded-xl shadow-lg decoration-none">Zurück zu SoSci Survey</a> : <div className="p-4 bg-red-50 text-red-600 rounded text-sm">Fehler: Sitzungstoken nicht gefunden.</div>}</div></div>);
+            return (<div className="min-h-screen bg-slate-50 flex flex-col items-center justify-center p-4 text-center"><div className="bg-white p-8 rounded-2xl shadow-xl max-w-lg w-full border-t-8 border-blue-500 animate-fade-in"><h2 className="text-2xl font-bold text-gray-800 mb-4">Danke fürs Ausprobieren unserer Webseite!</h2><p className="text-gray-600 mb-6">Bitte beantworte nun noch ein paar abschließende Fragen. 
+                    Klicke dazu bitte auf diesen Link, um zurück zum Fragebogen zu kommen:</p>{targetUrl ? <a href={targetUrl} className="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 rounded-xl shadow-lg decoration-none"> <div className="p-4 bg-red-50 text-red-600 rounded text-sm">Fehler: Sitzungstoken nicht gefunden.</div>}</div></div>);
         };
 
         function App() {
