--- a/index.html
+++ b/index.html
@@ -312,51 +312,58 @@
         };
 
         // --- BLOG PAGE (Handle logic for both Initial and Personalized) ---
-        const BlogPage = ({ onAction, mode = 'initial' }) => {
-            const [selectedArticle, setSelectedArticle] = useState(null);
-            const [categoryFilter, setCategoryFilter] = useState("Alle Beiträge");
-            const [showLoginModal, setShowLoginModal] = useState(false);
-            const [likes, setLikes] = useState({});
+// 1. Hier 'cookieChoice' als Parameter hinzufügen!
+const BlogPage = ({ onAction, mode = 'initial', cookieChoice }) => {
+    const [selectedArticle, setSelectedArticle] = useState(null);
+    const [categoryFilter, setCategoryFilter] = useState("Alle Beiträge");
+    const [showLoginModal, setShowLoginModal] = useState(false);
+    const [likes, setLikes] = useState({});
+    
+    // HIER DIE NEUE LOGIK FÜR PERSONALISIERTE INHALTE
+    const [articlesToDisplay, setArticlesToDisplay] = useState([]);
+
+    useEffect(() => {
+        if (mode === 'initial') {
+            setArticlesToDisplay(BLOG_CONTENT);
+        } else {
+            // PERSONALIZED MODE: Nimm die "Personalized" Artikel + einen Mix aus den alten
+            const oldContentShuffled = [...BLOG_CONTENT].sort(() => 0.5 - Math.random());
+            setArticlesToDisplay([...PERSONALIZED_CONTENT, ...oldContentShuffled]);
+        }
+    }, [mode]);
+
+    const requiredTime = mode === 'initial' ? MIN_BROWSING_TIME_1 : MIN_BROWSING_TIME_2;
+    const [timeLeft, setTimeLeft] = useState(requiredTime);
+
+    useEffect(() => {
+        if (timeLeft <= 0) return;
+        const timer = setInterval(() => setTimeLeft(prev => prev - 1), 1000);
+        return () => clearInterval(timer);
+    }, [timeLeft]);
+
+    // Filter logic (wirkt auf das jeweilige articlesToDisplay Array)
+    const filteredArticles = categoryFilter === "Alle Beiträge" 
+        ? articlesToDisplay 
+        : articlesToDisplay.filter(a => a.cat === categoryFilter);
+
+    const categories = ["Alle Beiträge", "Forschung", "Ernährung", "Fitness", "Mental Health", "Prävention"];
+    const toggleLike = (e, id) => { e.stopPropagation(); setLikes(prev => ({...prev, [id]: !prev[id]})); };
+
+    const ActionButton = ({inHeader}) => {
+        if (mode === 'initial') {
+            // A) Wenn der Timer noch läuft
+            if (timeLeft > 0) return (<button disabled className={`bg-slate-300 text-slate-500 rounded-full font-medium cursor-not-allowed flex items-center gap-2 ${inHeader ? 'px-5 py-2 text-sm' : 'w-full py-3 justify-center'}`}><Icon path={paths.clock} className="w-4 h-4 animate-pulse" /> Gesundheitsprofil erstellen in {timeLeft}s</button>);
             
-            // HIER DIE NEUE LOGIK FÜR PERSONALISIERTE INHALTE
-            const [articlesToDisplay, setArticlesToDisplay] = useState([]);
+            // B) NEU: Wenn der Timer abgelaufen ist, aber noch keine Cookies gewählt wurden
+            if (cookieChoice === null) return (<button disabled className={`bg-slate-200 text-slate-400 rounded-full font-medium cursor-not-allowed flex items-center gap-2 ${inHeader ? 'px-5 py-2 text-sm' : 'w-full py-3 justify-center'}`}>Bitte Cookie-Wahl treffen</button>);
 
-            useEffect(() => {
-                if (mode === 'initial') {
-                    setArticlesToDisplay(BLOG_CONTENT);
-                } else {
-                    // PERSONALIZED MODE: Nimm die "Personalized" Artikel + einen Mix aus den alten
-                    const oldContentShuffled = [...BLOG_CONTENT].sort(() => 0.5 - Math.random());
-                    setArticlesToDisplay([...PERSONALIZED_CONTENT, ...oldContentShuffled]);
-                }
-            }, [mode]);
-
-            const requiredTime = mode === 'initial' ? MIN_BROWSING_TIME_1 : MIN_BROWSING_TIME_2;
-            const [timeLeft, setTimeLeft] = useState(requiredTime);
-
-            useEffect(() => {
-                if (timeLeft <= 0) return;
-                const timer = setInterval(() => setTimeLeft(prev => prev - 1), 1000);
-                return () => clearInterval(timer);
-            }, [timeLeft]);
-
-            // Filter logic (wirkt auf das jeweilige articlesToDisplay Array)
-            const filteredArticles = categoryFilter === "Alle Beiträge" 
-                ? articlesToDisplay 
-                : articlesToDisplay.filter(a => a.cat === categoryFilter);
-
-            const categories = ["Alle Beiträge", "Forschung", "Ernährung", "Fitness", "Mental Health", "Prävention"];
-            const toggleLike = (e, id) => { e.stopPropagation(); setLikes(prev => ({...prev, [id]: !prev[id]})); };
-
-            const ActionButton = ({inHeader}) => {
-                if (mode === 'initial') {
-                    if (timeLeft > 0) return (<button disabled className={`bg-slate-300 text-slate-500 rounded-full font-medium cursor-not-allowed flex items-center gap-2 ${inHeader ? 'px-5 py-2 text-sm' : 'w-full py-3 justify-center'}`}><Icon path={paths.clock} className="w-4 h-4 animate-pulse" /> Profil erstellen in {timeLeft}s</button>);
-                    return (<button onClick={onAction} className={`bg-slate-900 text-white rounded-full font-medium hover:bg-slate-800 transition-colors shadow-lg shadow-slate-900/20 animate-fade-in ${inHeader ? 'px-5 py-2 text-sm' : 'w-full py-3'}`}>Profil erstellen</button>);
-                } else {
-                    if (timeLeft > 0) return (<div className={`bg-green-100 text-green-800 rounded-full text-xs font-bold animate-pulse ${inHeader ? 'px-4 py-2' : 'w-full py-3 text-center'}`}>Personalisierte Ansicht aktiv...</div>);
-                    return (<button onClick={onAction} className={`bg-green-600 text-white rounded-full font-bold hover:bg-green-700 transition-colors shadow-lg shadow-green-900/20 animate-fade-in ${inHeader ? 'px-6 py-2 text-sm' : 'w-full py-3'}`}>Test beendet! Jetzt hier weiter zum Fragebogen</button>);
-                }
-            };
+            // C) Wenn alles bereit ist
+            return (<button onClick={onAction} className={`bg-slate-900 text-white rounded-full font-medium hover:bg-slate-800 transition-colors shadow-lg shadow-slate-900/20 animate-fade-in ${inHeader ? 'px-5 py-2 text-sm' : 'w-full py-3'}`}>Gesundheitsprofil erstellen</button>);
+        } else {
+            if (timeLeft > 0) return (<div className={`bg-green-100 text-green-800 rounded-full text-xs font-bold animate-pulse ${inHeader ? 'px-4 py-2' : 'w-full py-3 text-center'}`}>Personalisierte Ansicht aktiv...</div>);
+            return (<button onClick={onAction} className={`bg-green-600 text-white rounded-full font-bold hover:bg-green-700 transition-colors shadow-lg shadow-green-900/20 animate-fade-in ${inHeader ? 'px-6 py-2 text-sm' : 'w-full py-3'}`}>Usability Test beendet! Zurück zum Fragebogen</button>);
+        }
+    };
 
             const HeaderTitle = () => (
                 <div onClick={() => {setCategoryFilter("Alle Beiträge"); setSelectedArticle(null);}} className="flex items-center gap-2 cursor-pointer hover:opacity-80 transition-opacity">
@@ -795,16 +802,26 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
             const handleFinishStudy = () => { const duration = Date.now() - timers.current.postBrowsingStart; const completeData = { ...finalData, ...times, postBrowsingTime: duration }; setFinalData(completeData); setStep('end'); };
 
             return (
-                <div className="font-sans text-gray-800 antialiased selection:bg-green-100 selection:text-green-900">
-                    {step === 'intro' && <IntroScreen onStart={handleStartStudy} />}
-                    {step === 'blog' && (<><BlogPage onAction={handleGoToRegistration} mode="initial" />{bannerVisible && (<CookieBanner group={groupID} onDecision={handleCookieDecision} audioObject={audioRef.current} onBannerLoad={handleBannerLoad} />)}</>)}
-                    {step === 'register' && (<RegistrationForm onSubmit={handleRegistrationSubmit} group={groupID} audioObject={audioManRef.current} />)}
-                    {step === 'loading' && <LoadingScreen onFinished={handleLoadingFinished} />}
-                    {step === 'personalized_blog' && (<BlogPage onAction={handleFinishStudy} mode="personalized" />)}
-                    {step === 'end' && <EndScreen data={finalData} sessionToken={sessionToken} />}
-                </div>
-            );
-        }
+    <div className="font-sans text-gray-800 antialiased selection:bg-green-100 selection:text-green-900">
+        {step === 'intro' && <IntroScreen onStart={handleStartStudy} />}
+        {step === 'blog' && (
+            <>
+                <BlogPage onAction={handleGoToRegistration} mode="initial" cookieChoice={cookieChoice} />
+                {bannerVisible && (
+                    <CookieBanner group={groupID} onDecision={handleCookieDecision} audioObject={audioRef.current} onBannerLoad={handleBannerLoad} />
+                )}
+            </>
+        )}
+        {step === 'register' && (
+            <RegistrationForm onSubmit={handleRegistrationSubmit} group={groupID} audioObject={audioManRef.current} />
+        )}
+        {step === 'loading' && <LoadingScreen onFinished={handleLoadingFinished} />}
+        {step === 'personalized_blog' && (
+            <BlogPage onAction={handleFinishStudy} mode="personalized" cookieChoice={cookieChoice} />
+        )}
+        {step === 'end' && <EndScreen data={finalData} sessionToken={sessionToken} />}
+    </div>
+);
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
